--- a/index.html
+++ b/index.html
@@ -1,206 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hotelify – Best Hotel Deals</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Hotelify - Luxury Scroll</title>
+
+<!-- AOS library for scroll animations -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+
+<style>
+  /* ===== Reset & Base ===== */
+  * { margin:0; padding:0; box-sizing:border-box; }
+  html { scroll-behavior: smooth; font-family: Arial, sans-serif; }
+  body { scroll-snap-type: y mandatory; overflow-y: scroll; }
+  a { text-decoration: none; color: inherit; }
+  .container { width: 90%; margin: auto; max-width: 1200px; }
+
+  /* ===== Navbar ===== */
+  header { position: fixed; top:0; width:100%; background: rgba(255,255,255,0.95); z-index:1000; box-shadow:0 2px 8px rgba(0,0,0,0.1); backdrop-filter: blur(5px); }
+  .navbar { display: flex; justify-content: space-between; align-items: center; padding: 1rem 0; }
+  .nav-links { list-style: none; display: flex; gap: 1rem; }
+  .nav-links a { padding: 0.5rem 1rem; transition: 0.3s; }
+  .nav-links a:hover { color: #0077cc; }
+  .nav-toggle { display: none; font-size: 1.5rem; background: none; border: none; cursor:pointer; }
+
+  /* ===== Section Snap ===== */
+  section { height:100vh; scroll-snap-align:start; display:flex; justify-content:center; align-items:center; position:relative; }
+  
+  /* ===== Hero Section ===== */
+  .hero {
+    color:#fff;
+    text-align:center;
+    overflow:hidden;
+  }
+  .hero::before {
+    content:"";
+    position:absolute; top:0; left:0; width:100%; height:100%;
+    background: url('https://source.unsplash.com/1600x900/?hotel,resort') center/cover no-repeat;
+    animation: heroSlide 20s linear infinite alternate;
+    z-index:-3;
+    filter: brightness(0.5);
+  }
+  .hero::after {
+    content:"";
+    position:absolute; top:0; left:0; width:100%; height:100%;
+    background: linear-gradient(135deg, rgba(0,119,204,0.5), rgba(0,204,204,0.3));
+    z-index:-2;
+  }
+  @keyframes heroSlide {
+    0% { transform: scale(1) translateX(0); }
+    50% { transform: scale(1.05) translateX(-20px); }
+    100% { transform: scale(1) translateX(0); }
+  }
+
+  /* Floating bubbles */
+  .bubble { position: absolute; border-radius: 50%; opacity: 0.5; animation: float 6s ease-in-out infinite; background: rgba(255,255,255,0.2); z-index:-1; }
+  @keyframes float { 0%{transform:translateY(0) scale(1);} 50%{transform:translateY(-30px) scale(1.1);} 100%{transform:translateY(0) scale(1);} }
+
+  /* Particle canvas */
+  #particles { position:absolute; top:0; left:0; width:100%; height:100%; z-index:-1; pointer-events:none; }
+
+  .hero-content { position: relative; z-index:1; }
+  .hero-content h1 { font-size: 3rem; margin-bottom:1rem; }
+  .hero-content p { font-size: 1.2rem; margin-bottom: 1.5rem; }
+  .btn { background: #0077cc; color: #fff; padding: 0.8rem 1.5rem; border:none; cursor:pointer; font-size: 1rem; border-radius:5px; transition:0.3s; }
+  .btn:hover { background:#005fa3; }
+  .btn-pulse { animation: pulse 2s infinite; }
+  @keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.08);} 100%{transform:scale(1);} }
+  .dynamic-text { color:#FFD700; font-weight:bold; }
+
+  /* Hotels Section */
+  .hotels { background:#f2f2f2; flex-direction:column; }
+  .hotel-grid { display:grid; gap:2rem; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); width:100%; max-width:1200px; margin:auto; }
+  .hotel-card { border-radius:8px; overflow:hidden; box-shadow:0 2px 12px rgba(0,0,0,0.1); text-align:center; background:#fff; transition: transform 0.3s; }
+  .hotel-card:hover { transform: translateY(-10px); }
+  .hotel-card img { width:100%; height:200px; object-fit: cover; }
+  .hotel-card h3 { margin:1rem 0 0.5rem; }
+  .hotel-card p { margin-bottom:1rem; color:#555; }
+
+  /* About Section */
+  .about { background:#e6f7ff; flex-direction:column; }
+  .about p { text-align:center; max-width:800px; margin:auto; color:#555; line-height:1.6; }
+
+  /* Contact Section */
+  .contact { background:#f9f9f9; flex-direction:column; }
+  .contact form { display:flex; flex-direction: column; gap:1rem; max-width:600px; margin:auto; }
+  .contact input, .contact textarea { padding:0.8rem; border:1px solid #ccc; border-radius:4px; width:100%; }
+  .contact textarea { resize: vertical; min-height:120px; }
+
+  footer { text-align:center; padding:1rem; background:#d9d9d9; color:#555; }
+
+  @media(max-width:768px){
+    .nav-toggle { display:block; }
+    .nav-links { display:none; flex-direction: column; gap:0; background:#fff; position:absolute; top:100%; right:0; width:200px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
+    .nav-links.show { display:flex; }
+    .nav-links a { padding:1rem; border-bottom:1px solid #eee; }
+  }
+</style>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body>
 
-  <!-- Navbar -->
-  <header class="bg-white shadow-md fixed w-full z-20 top-0">
-    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-      <div class="text-2xl font-bold text-indigo-600">Hotelify</div>
-      <nav class="space-x-6 hidden md:flex">
-        <a href="index.html" class="hover:text-indigo-600">Home</a>
-        <a href="hotels.html" class="hover:text-indigo-600">Hotels</a>
-        <a href="about.html" class="hover:text-indigo-600">About</a>
-        <a href="contact.html" class="hover:text-indigo-600">Contact</a>
-      </nav>
-      <button class="md:hidden mobile-menu-button">
-        <span class="text-2xl">&#9776;</span>
-      </button>
-    </div>
-  </header>
-
-  <!-- Mobile Menu -->
-  <div class="mobile-menu hidden bg-white text-center py-3">
-    <a href="index.html" class="block py-2">Home</a>
-    <a href="hotels.html" class="block py-2">Hotels</a>
-    <a href="about.html" class="block py-2">About</a>
-    <a href="contact.html" class="block py-2">Contact</a>
+<header>
+  <div class="container navbar">
+    <a href="#" class="logo">Hotelify</a>
+    <ul class="nav-links">
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#hotels">Hotels</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+    <button class="nav-toggle">☰</button>
   </div>
-  <!-- Hero -->
-<section id="home" class="pt-24 bg-cover bg-center" 
-         style="background-image:url('https://unsplash.com/photos/aerial-photo-of-buildings-during-dusk-boLgiM0qwkg');">
-  <div class="h-screen flex justify-center items-center bg-black bg-opacity-40">
-    <div class="text-center text-white max-w-xl" data-aos="fade-up">
-      <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Best Hotel Deals Worldwide</h1>
-      <p class="text-lg mb-6">Book trusted hotels with Agoda & save more.</p>
-      <a href="hotels.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition">
-        Search Hotels
-      </a>
+</header>
+
+<!-- Hero -->
+<section id="hero" class="hero">
+  <canvas id="particles"></canvas>
+  <div class="hero-content" data-aos="fade-up">
+    <h1>Discover <span class="dynamic-text">Best Hotel Deals Worldwide</span></h1>
+    <p>Book trusted hotels & save more!</p>
+    <a href="#hotels" class="btn btn-pulse">Explore Hotels</a>
+  </div>
+  <div class="bubble" style="width:50px;height:50px;top:20%;left:10%;animation-delay:0s;"></div>
+  <div class="bubble" style="width:30px;height:30px;top:40%;left:70%;animation-delay:1s;"></div>
+  <div class="bubble" style="width:40px;height:40px;top:60%;left:30%;animation-delay:2s;"></div>
+  <div class="bubble" style="width:25px;height:25px;top:80%;left:50%;animation-delay:1.5s;"></div>
+</section>
+
+<!-- Hotels -->
+<section id="hotels" class="hotels">
+  <h2 data-aos="fade-down">Featured Hotels</h2>
+  <div class="hotel-grid">
+    <div class="hotel-card" data-aos="fade-up">
+      <img src="https://source.unsplash.com/400x300/?hotel,beach" alt="Luxury Beach Resort">
+      <h3>Luxury Beach Resort</h3>
+      <p>5‑star beachfront hotel</p>
+    </div>
+    <div class="hotel-card" data-aos="fade-up" data-aos-delay="100">
+      <img src="https://source.unsplash.com/400x300/?hotel,city" alt="City Center Hotel">
+      <h3>City Center Hotel</h3>
+      <p>Perfect location for business & leisure</p>
+    </div>
+    <div class="hotel-card" data-aos="fade-up" data-aos-delay="200">
+      <img src="https://source.unsplash.com/400x300/?hotel,budget" alt="Budget Friendly Stay">
+      <h3>Budget Friendly Stay</h3>
+      <p>Affordable & comfortable</p>
     </div>
   </div>
 </section>
 
-<!-- Featured Hotels -->
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up">
-    <img src="https://images.unsplash.com/photo-1560347876-aeef00ee58a1?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" />
-    <div class="p-6">
-      <h3 class="text-xl font-semibold mb-2">Luxury Beach Resort</h3>
-      <p class="text-gray-600 mb-4">5‑star beachfront hotel</p>
-      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-    </div>
-  </div>
-
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
-    <img src="https://images.unsplash.com/photo-1501117716987-3f8b241a07c5?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" />
-    <div class="p-6">
-      <h3 class="text-xl font-semibold mb-2">City Center Hotel</h3>
-      <p class="text-gray-600 mb-4">Perfect location for business & leisure</p>
-      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-    </div>
-  </div>
-
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
-    <img src="https://images.unsplash.com/photo-1582719478121-5c3f6e6160f6?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" />
-    <div class="p-6">
-      <h3 class="text-xl font-semibold mb-2">Budget Friendly Stay</h3>
-      <p class="text-gray-600 mb-4">Affordable & comfortable</p>
-      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-    </div>
-  </div>
-
-</div>
-  <!-- Hero -->
-<section id="home" class="pt-24 bg-cover bg-center" 
-         style="background-image:url('https://images.unsplash.com/photo-1501117716987-c8e6e3f7b424?auto=format&fit=crop&w=1600&q=80');">
-  <div class="h-screen flex justify-center items-center bg-black bg-opacity-40">
-    <div class="text-center text-white max-w-xl" data-aos="fade-up">
-      <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Best Hotel Deals Worldwide</h1>
-      <p class="text-lg mb-6">Book trusted hotels with Agoda & save more.</p>
-      <a href="hotels.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition">
-        Search Hotels
-      </a>
-    </div>
-  </div>
+<!-- About -->
+<section id="about" class="about">
+  <h2 data-aos="fade-right">About Hotelify</h2>
+  <p data-aos="fade-left">Hotelify helps you find the best hotel deals from trusted partners like Agoda. Enjoy worldwide coverage and unbeatable deals!</p>
 </section>
 
-<!-- Featured Hotels -->
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+<!-- Contact -->
+<section id="contact" class="contact">
+  <h2 data-aos="fade-right">Get In Touch</h2>
+  <form data-aos="fade-up">
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <textarea placeholder="Your Message" required></textarea>
+    <button type="submit" class="btn">Send Message</button>
+  </form>
+</section>
 
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up">
-    <img src="https://images.unsplash.com/photo-1560347876-aeef00ee58a1?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" alt="Luxury Beach Resort"/>
-    <div class="p-6">
-      <h3 class="text-xl font-semibold mb-2">Luxury Beach Resort</h3>
-      <p class="text-gray-600 mb-4">5‑star beachfront hotel</p>
-      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-    </div>
-  </div>
+<footer>
+  <p>© 2025 Hotelify | Built with ❤️</p>
+</footer>
 
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
-    <img src="https://images.unsplash.com/photo-1501117716987-3f8b241a07c5?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" alt="City Center Hotel"/>
-    <div class="p-6">
-      <h3 class="text-xl font-semibold mb-2">City Center Hotel</h3>
-      <p class="text-gray-600 mb-4">Perfect location for business & leisure</p>
-      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-    </div>
-  </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+  // Navbar toggle
+  const toggle = document.querySelector('.nav-toggle');
+  const navLinks = document.querySelector('.nav-links');
+  toggle.addEventListener('click', () => navLinks.classList.toggle('show'));
 
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
-    <img src="https://images.unsplash.com/photo-1582719478121-5c3f6e6160f6?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover" alt="Budget Friendly Stay"/>
-    <div class="p-6">
-      <h3 class="text-xl font-semibold mb-2">Budget Friendly Stay</h3>
-      <p class="text-gray-600 mb-4">Affordable & comfortable</p>
-      <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-    </div>
-  </div>
+  // AOS animations
+  AOS.init({ duration: 800, once: true });
 
-</div>
+  // Hero dynamic text
+  const phrases = ["Best Hotel Deals Worldwide", "Luxury Stays for Every Traveler", "Affordable Hotels Anywhere", "Book Your Dream Vacation"];
+  const dynamicText = document.querySelector('.dynamic-text');
+  let i = 0;
+  setInterval(() => { i = (i+1) % phrases.length; dynamicText.textContent = phrases[i]; }, 3000);
 
-  <!-- Hero -->
-  <section id="home" class="pt-24 bg-cover bg-center" style="background-image:url('https://source.unsplash.com/1600x900/?hotel,resort');">
-    <div class="h-screen flex justify-center items-center bg-black bg-opacity-40">
-      <div class="text-center text-white max-w-xl" data-aos="fade-up">
-        <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Best Hotel Deals Worldwide</h1>
-        <p class="text-lg mb-6">Book trusted hotels with Agoda & save more.</p>
-        <a href="hotels.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition">
-          Search Hotels
-        </a>
-      </div>
-    </div>
-  </section>
+  // Particle background
+  const canvas = document.getElementById('particles');
+  const ctx = canvas.getContext('2d');
+  let particles = [];
+  function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
+  window.addEventListener('resize', resizeCanvas);
+  resizeCanvas();
+  for(let j=0;j<100;j++){
+    particles.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:Math.random()*2+1, dx:(Math.random()-0.5)*0.5, dy:(Math.random()-0.5)*0.5});
+  }
+  function animate(){ ctx.clearRect(0,0,canvas.width,canvas.height);
+    particles.forEach(p=>{ ctx.beginPath(); ctx.arc(p.x,p.y,p.r,0,Math.PI*2); ctx.fillStyle='rgba(255,255,255,0.3)'; ctx.fill();
+    p.x+=p.dx; p.y+=p.dy; if(p.x>canvas.width)p.x=0; if(p.x<0)p.x=canvas.width; if(p.y>canvas.height)p.y=0; if(p.y<0)p.y=canvas.height; });
+    requestAnimationFrame(animate);
+  }
+  animate();
+</script>
 
-  <!-- Featured Hotels -->
-  <section id="hotels" class="py-16 container mx-auto px-6">
-    <h2 class="text-3xl font-bold text-center mb-8" data-aos="fade-right">Featured Hotels</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-
-      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up">
-        <img src="https://source.unsplash.com/600x400/?beach,resort" class="w-full h-48 object-cover" />
-        <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2">Luxury Beach Resort</h3>
-          <p class="text-gray-600 mb-4">5‑star beachfront hotel</p>
-          <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-        </div>
-      </div>
-
-      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
-        <img src="https://source.unsplash.com/600x400/?city,hotel" class="w-full h-48 object-cover" />
-        <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2">City Center Hotel</h3>
-          <p class="text-gray-600 mb-4">Perfect location for business & leisure</p>
-          <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-        </div>
-      </div>
-
-      <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
-        <img src="https://source.unsplash.com/600x400/?budget,hotel" class="w-full h-48 object-cover" />
-        <div class="p-6">
-          <h3 class="text-xl font-semibold mb-2">Budget Friendly Stay</h3>
-          <p class="text-gray-600 mb-4">Affordable & comfortable</p>
-          <a href="hotels.html" class="text-indigo-600 font-medium hover:underline">View Hotels</a>
-        </div>
-      </div>
-
-    </div>
-    <div class="text-center mt-8">
-      <a href="hotels.html" class="text-indigo-600 font-semibold hover:underline">See All Hotels →</a>
-    </div>
-  </section>
-
-  <!-- About Preview -->
-  <section id="about" class="py-16 bg-indigo-50 text-center px-6">
-    <h2 class="text-3xl font-bold mb-4" data-aos="zoom-in">About Hotelify</h2>
-    <p class="max-w-2xl mx-auto text-lg" data-aos="fade-up">
-      Hotelify helps you find the best hotel deals from trusted partners like Agoda. Enjoy worldwide coverage and verified deals at unbeatable prices.
-    </p>
-    <a href="about.html" class="mt-4 inline-block text-indigo-600 font-semibold hover:underline" data-aos="fade-up">Read More →</a>
-  </section>
-
-  <!-- Contact Preview -->
-  <section id="contact" class="py-16 container mx-auto px-6 text-center">
-    <h2 class="text-3xl font-bold mb-6" data-aos="fade-right">Get In Touch</h2>
-    <p data-aos="fade-up" class="mb-4">Have questions? Contact us now!</p>
-    <a href="contact.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition" data-aos="fade-up">Contact Us</a>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-white text-center px-6 py-6">
-    © 2025 Hotelify | Built with ❤️
-  </footer>
-
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({ duration: 800, once: true });
-    const btn = document.querySelector(".mobile-menu-button");
-    const menu = document.querySelector(".mobile-menu");
-    btn.addEventListener("click", () => menu.classList.toggle("hidden"));
-  </script>
 </body>
 </html>
