--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ header { position: fixed; top:0; width:100%; background: rgba(255,255,255,0.95);
 .nav-links a:hover { color: #0055aa; }
 .nav-toggle { display: none; font-size: 1.5rem; background: none; border: none; cursor:pointer; }
 
-section { height:100vh; scroll-snap-align:start; display:flex; justify-content:center; align-items:center; position:relative; opacity:0; transform:translateY(50px); transition: all 1s ease; overflow:hidden; }
+section { min-height:100vh; scroll-snap-align:start; display:flex; justify-content:center; align-items:center; position:relative; opacity:0; transform:translateY(50px); transition: all 1s ease; overflow:hidden; }
 
 .wave-bg { position:absolute; bottom:0; left:0; width:200%; height:200px; background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23003366" fill-opacity="0.2" d="M0,192L60,197.3C120,203,240,213,360,197.3C480,181,600,139,720,144C840,149,960,203,1080,208C1200,213,1320,171,1380,149.3L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>'); background-repeat: repeat-x; animation: waveMove 10s linear infinite; z-index:-1; }
 @keyframes waveMove { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
@@ -33,7 +33,12 @@ section { height:100vh; scroll-snap-align:start; display:flex; justify-content:c
 
 .hero-content { position: relative; z-index:1; }
 .hero-content h1 { font-size: 3rem; margin-bottom:1rem; background: linear-gradient(90deg, #66ccff, #003366, #3399ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
-.hero-content p { font-size: 1.2rem; margin-bottom: 1.5rem; color:#cce6ff; }
+.hero-content p { font-size: 1.2rem; margin-bottom: 1rem; color:#cce6ff; }
+
+.popular-cities { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin-bottom:15px; }
+.city-btn { padding:8px 15px; border:none; border-radius:6px; background: linear-gradient(90deg, #66ccff, #003366); color:#fff; cursor:pointer; transition:0.3s; font-weight:500; }
+.city-btn:hover { background: linear-gradient(90deg, #3399ff, #001f4d); transform: scale(1.05); }
+
 .btn { background: #003366; color: #fff; padding: 0.8rem 1.5rem; border:none; cursor:pointer; font-size: 1rem; border-radius:5px; transition:0.3s; }
 .btn:hover { background:#0055aa; }
 .btn-pulse { animation: pulse 2s infinite; }
@@ -41,7 +46,6 @@ section { height:100vh; scroll-snap-align:start; display:flex; justify-content:c
 @keyframes textGlow { 0% { background-position:0% 50%; } 50% { background-position:100% 50%; } 100% { background-position:0% 50%; } }
 .dynamic-text { background: linear-gradient(90deg, #66ccff, #3399ff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; font-weight:bold; }
 
-/* Hotels Section */
 .hotels { background:#cce0ff; flex-direction:column; padding-top:50px; }
 .hotels h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; margin-bottom:1rem; }
 .hotel-grid { display:grid; gap:2rem; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); width:100%; max-width:1200px; margin:auto; }
@@ -52,12 +56,10 @@ section { height:100vh; scroll-snap-align:start; display:flex; justify-content:c
 .hotel-card p { margin-bottom:0.5rem; color:#0055aa; }
 .hotel-card .btn-book { margin-bottom:1rem; }
 
-/* About Section */
 .about { background:#99c2ff; flex-direction:column; }
 .about h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
 .about p { text-align:center; max-width:800px; margin:auto; color:#003366; line-height:1.6; }
 
-/* Contact Section */
 .contact { background:#66a3ff; flex-direction:column; }
 .contact h2 { background: linear-gradient(90deg, #66ccff, #003366); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: textGlow 5s ease-in-out infinite; }
 .contact form { display:flex; flex-direction: column; gap:1rem; max-width:600px; margin:auto; }
@@ -66,11 +68,21 @@ section { height:100vh; scroll-snap-align:start; display:flex; justify-content:c
 
 footer { text-align:center; padding:1rem; background:#003366; color:#fff; }
 
+.agoda-searchbox { max-width: 600px; margin: 20px auto; padding: 15px; background: rgba(0,51,102,0.9); border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+.agoda-searchbox input, .agoda-searchbox select { width: calc(50% - 10px); margin: 5px; padding: 10px; border: none; border-radius: 6px; font-size: 1rem; }
+.agoda-searchbox button { width: 100%; margin-top: 10px; padding: 12px; background: linear-gradient(90deg, #66ccff, #003366); color: #fff; border: none; border-radius: 6px; font-size: 1rem; cursor: pointer; transition: 0.3s; }
+.agoda-searchbox button:hover { background: linear-gradient(90deg, #3399ff, #001f4d); }
+
+#scrollUp { position: fixed; bottom: 30px; right: 30px; background: linear-gradient(90deg, #66ccff, #003366); color: #fff; border: none; border-radius: 50%; width: 50px; height: 50px; font-size: 1.5rem; cursor: pointer; display: none; align-items: center; justify-content: center; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.2); transition: transform 0.3s; }
+#scrollUp:hover { transform: scale(1.1); }
+
 @media(max-width:768px){
   .nav-toggle { display:block; }
   .nav-links { display:none; flex-direction: column; gap:0; background:#fff; position:absolute; top:100%; right:0; width:200px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
   .nav-links.show { display:flex; }
   .nav-links a { padding:1rem; border-bottom:1px solid #eee; }
+  .agoda-searchbox input, .agoda-searchbox select { width: 100%; margin: 5px 0; }
+  .popular-cities { flex-direction: column; }
 }
 </style>
 </head>
@@ -98,50 +110,55 @@ footer { text-align:center; padding:1rem; background:#003366; color:#fff; }
     <h1>Find <span class="dynamic-text">Best Agoda Hotel Deals</span></h1>
     <p>Book trusted hotels worldwide with Agoda affiliate links and save!</p>
 
-    <!-- Hero Agoda Search Box -->
-    <div id="agoda_searchbox_hero" style="margin-top:20px;"></div>
+    <!-- Popular Cities Quick Links -->
+    <div class="popular-cities" data-aos="fade-up" data-aos-delay="200">
+      <button class="city-btn" data-city="Tokyo">Tokyo</button>
+      <button class="city-btn" data-city="Bangkok">Bangkok</button>
+      <button class="city-btn" data-city="Singapore">Singapore</button>
+      <button class="city-btn" data-city="Dubai">Dubai</button>
+      <button class="city-btn" data-city="Paris">Paris</button>
+    </div>
+
+    <!-- Styled Hero Agoda Search Box -->
+    <div id="agoda_searchbox_hero" class="agoda-searchbox"></div>
   </div>
 </section>
 
-<!-- Hotels -->
+<!-- Hotels Section -->
 <section id="hotels" class="hotels">
   <div class="wave-bg"></div>
   <h2 data-aos="fade-down">Featured Hotels</h2>
-
-  <!-- Hotels Grid -->
   <div class="hotel-grid">
     <div class="hotel-card" data-aos="fade-up">
       <img src="https://source.unsplash.com/400x300/?hotel,beach,blue" alt="Luxury Beach Resort">
       <h3>Luxury Beach Resort</h3>
       <p>5‑star beachfront hotel</p>
-      <a href="https://www.agoda.com/affiliate?cid=YOUR_CID_HERE&hotel=12345" target="_blank" class="btn btn-book">Book Now on Agoda</a>
+      <a href="https://www.agoda.com/affiliate?cid=YOUR_CID_HERE&hotel=12345" target="_blank" class="btn btn-book btn-pulse">Book Now on Agoda</a>
     </div>
     <div class="hotel-card" data-aos="fade-up" data-aos-delay="100">
       <img src="https://source.unsplash.com/400x300/?hotel,city,blue" alt="City Center Hotel">
       <h3>City Center Hotel</h3>
       <p>Perfect location for business & leisure</p>
-      <a href="https://www.agoda.com/affiliate?cid=YOUR_CID_HERE&hotel=67890" target="_blank" class="btn btn-book">Book Now on Agoda</a>
+      <a href="https://www.agoda.com/affiliate?cid=YOUR_CID_HERE&hotel=67890" target="_blank" class="btn btn-book btn-pulse">Book Now on Agoda</a>
     </div>
     <div class="hotel-card" data-aos="fade-up" data-aos-delay="200">
       <img src="https://source.unsplash.com/400x300/?hotel,budget,blue" alt="Budget Friendly Stay">
       <h3>Budget Friendly Stay</h3>
       <p>Affordable & comfortable</p>
-      <a href="https://www.agoda.com/affiliate?cid=YOUR_CID_HERE&hotel=24680" target="_blank" class="btn btn-book">Book Now on Agoda</a>
+      <a href="https://www.agoda.com/affiliate?cid=YOUR_CID_HERE&hotel=24680" target="_blank" class="btn btn-book btn-pulse">Book Now on Agoda</a>
     </div>
   </div>
-
-  <!-- Hotels Section Agoda Search Box -->
-  <div id="agoda_searchbox_hotels" style="margin-top:30px;"></div>
+  <div id="agoda_searchbox_hotels" class="agoda-searchbox"></div>
 </section>
 
-<!-- About -->
+<!-- About Section -->
 <section id="about" class="about">
   <div class="wave-bg"></div>
   <h2 data-aos="fade-right">About Hotelify</h2>
   <p data-aos="fade-left">Hotelify is an Agoda affiliate site helping you find the best hotel deals. We provide trusted listings with direct Agoda booking links worldwide.</p>
 </section>
 
-<!-- Contact -->
+<!-- Contact Section -->
 <section id="contact" class="contact">
   <div class="wave-bg"></div>
   <h2 data-aos="fade-right">Get In Touch</h2>
@@ -149,7 +166,7 @@ footer { text-align:center; padding:1rem; background:#003366; color:#fff; }
     <input type="text" placeholder="Your Name" required>
     <input type="email" placeholder="Your Email" required>
     <textarea placeholder="Your Message" required></textarea>
-    <button type="submit" class="btn">Send Message</button>
+    <button type="submit" class="btn btn-pulse">Send Message</button>
   </form>
 </section>
 
@@ -157,8 +174,12 @@ footer { text-align:center; padding:1rem; background:#003366; color:#fff; }
   <p>© 2025 Hotelify | Agoda Affiliate | Built with ❤️</p>
 </footer>
 
+<!-- Scroll-up Button -->
+<button id="scrollUp">&#8679;</button>
+
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script src="https://ajaxsearch.partners.agoda.com/affiliates/js/agoda_search.js"></script>
 <script>
 // Navbar toggle
 const toggle = document.querySelector('.nav-toggle');
@@ -185,26 +206,46 @@ const observer = new IntersectionObserver(entries=>{
   });
 },{ threshold:0.3 });
 sections.forEach(section=>observer.observe(section));
-</script>
 
-<!-- Agoda Affiliate Script -->
-<script type="text/javascript" src="https://ajaxsearch.partners.agoda.com/affiliates/js/agoda_search.js"></script>
-<script type="text/javascript">
-  var heroSearch = new SrchObject();
-  heroSearch.clientID("YOUR_CID_HERE"); // Replace with your Agoda CID
-  heroSearch.addParam("defaultCity","Asia");
-  heroSearch.addParam("currency","USD");
-  heroSearch.addParam("checkIn","2026-01-01");
-  heroSearch.addParam("checkOut","2026-01-02");
-  heroSearch.show("agoda_searchbox_hero");
+// Smooth scrolling
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function(e){
+    e.preventDefault();
+    document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth', block: 'start' });
+  });
+});
 
-  var hotelsSearch = new SrchObject();
-  hotelsSearch.clientID("YOUR_CID_HERE"); // Replace with your Agoda CID
-  hotelsSearch.addParam("defaultCity","Asia");
-  hotelsSearch.addParam("currency","USD");
-  hotelsSearch.addParam("checkIn","2026-01-01");
-  hotelsSearch.addParam("checkOut","2026-01-02");
-  hotelsSearch.show("agoda_searchbox_hotels");
-</script>
-</body>
-</html>
+// Scroll-up button
+const scrollUpBtn = document.getElementById('scrollUp');
+window.addEventListener('scroll', () => {
+  if(window.scrollY > 300){ scrollUpBtn.style.display = 'flex'; }
+  else { scrollUpBtn.style.display = 'none'; }
+});
+scrollUpBtn.addEventListener('click', () => { window.scrollTo({ top: 0, behavior: 'smooth' }); });
+
+// Agoda Search Boxes
+var heroSearch = new SrchObject();
+heroSearch.clientID("YOUR_CID_HERE"); 
+heroSearch.addParam("defaultCity","Asia");
+heroSearch.addParam("currency","USD");
+heroSearch.addParam("checkIn","2026-01-01");
+heroSearch.addParam("checkOut","2026-01-02");
+heroSearch.show("agoda_searchbox_hero");
+
+var hotelsSearch = new SrchObject();
+hotelsSearch.clientID("YOUR_CID_HERE"); 
+hotelsSearch.addParam("defaultCity","Asia");
+hotelsSearch.addParam("currency","USD");
+hotelsSearch.addParam("checkIn","2026-01-01");
+hotelsSearch.addParam("checkOut","2026-01-02");
+hotelsSearch.show("agoda_searchbox_hotels");
+
+// Popular Cities buttons
+document.querySelectorAll('.city-btn').forEach(btn=>{
+  btn.addEventListener('click',()=>{
+    let city = btn.getAttribute('data-city');
+    heroSearch.addParam("defaultCity", city);
+    heroSearch.show("agoda_searchbox_hero");
+  });
+});
+</script
